# jetbrains-docking-system

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/JetBrainsDockingSystem/: CMakeLists.txt  JetBrainsDockingSystemConfig.cmake.in  dockbutton.cpp  dockbutton.h  dockbutton_p.h  dockbuttondelegate.cpp  dockbuttondelegate.h  dockdragcontroller.cpp  dockdragcontroller_p.h  dockpanel.cpp  dockpanel_p.h  docksidebar.cpp  docksidebar_p.h  dockwidget.cpp  dockwidget.h  dockwidget_p.h  jbdsglobal.h  jbdsnamespace.h  qmfloatingwindowhelper.cpp  qmfloatingwindowhelper_p.cpp  qmfloatingwindowhelper_p.h
tests/: CMakeLists.txt
tests/normal/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
